# Encryption-friendly_LLM_Architecture

./: README.md
ciphertext/: CMakeLists.txt  README.md  convert.py
ciphertext/examples/: CMakeLists.txt  backward-bert-multi.cpp  convert2.cpp  keygen.cpp
ciphertext/src/: Exp.cpp  HEMMer.cpp  LayerNorm.cpp  LoRA.cpp  Loss.cpp  MatrixUtils.cpp  ReLU.cpp  Softmax.cpp  Tanh.cpp  TorchTransformerBlock.cpp  TransformerBlock.cpp
plaintext/: README.md  convert.py  saving_fine-tuning_data.py
plaintext/cramming.egg-info/: PKG-INFO  SOURCES.txt
plaintext/cramming/architectures/: architectures_grad.py
plaintext/cramming/config/arch/: crammed-bert.yaml
plaintext/cramming/config/eval/: GLUE_sane.yaml
